# monarchic-agent-protocol

./: .gitignore  Cargo.toml  LICENSE  Monarchic.AgentProtocol.csproj  README.md  build.gradle.kts  build.rs  composer.json  flake.nix  monarchic-agent-protocol.gemspec  package-lock.json  package.json  pubspec.yaml  result-1  result-2  result-3  result-4  result-5  result-6  result-7  result-8  setup.cfg
.github/workflows/: ci.yml  conventional-commits.yml  hash-refresh.yml  release.yml
checks/: ready-for-review-gate-checklist.md
examples/: README.md
examples/rust/: task.rs
examples/ts/: task.ts
hashes/: local-hashes.json  registry-hashes.json
schemas/: SCHEMA_CHANGELOG.md
schemas/v1/: artifact.json  dataset_ref.json  delivery_contract.json  eval_result.json  event.json  experiment_spec.json  gate_result.json  monarchic_agent_protocol.proto  objective_spec.json  provenance.json  run_context.json  run_outcome.json  schema.json  task.json
scripts/: conventional-commit-check.sh  conventional_commit_check.py  generate-json-schema.sh  generate-proto.sh  install-conventional-commit-hook.sh  lint-schemas.sh  pre-commit-schema-json-parse.sh  test-ci-schema-validation-hook.sh  test-examples.sh  test-json-schema.sh  test-pre-commit-schema-json-parse.sh  test-proto-availability-smoke.sh  test-proto.sh  test-readme-schema-index-coverage.sh  test-readme-schema-workflow.sh  test-ready-for-review-gate-checklist.sh  test-schema-changelog-format.sh  test-self-host-artifact-done-prefix.sh  test-self-host-artifact-latest-milestone.sh  test-self-host-artifact-log-key-order.sh  test-self-host-artifact-log-summary-traceability.sh  test-self-host-artifact-milestone-count-types.sh  test-self-host-artifact-report-file-list-consistency.sh  test-self-host-artifact-report-file-path-existence.sh  test-self-host-artifact-report-new-file-path-existence.sh  test-self-host-artifact-status-alignment.sh  test-self-host-artifact-text-fields.sh  test-self-host-artifact-timestamps.sh  test-self-host-artifacts.sh  update-local-hashes.sh  update-registry-hashes.sh  update-version.sh
(+59 files in other folders)
