[package]
name = "monarchic-agent-protocol"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Shared protocol types for Monarchic AI"
repository = "https://github.com/monarchic-ai/monarchic-agent-protocol"
homepage = "https://github.com/monarchic-ai/monarchic-agent-protocol"
readme = "README.md"

[lib]
path = "src/rust/lib.rs"

[dependencies]
prost = "0.14"
prost-types = "0.14"

[build-dependencies]
prost-build = "0.14"

[[example]]
name = "task"
path = "examples/rust/task.rs"
