[package]
name = "monarchic-agent-protocol"
version = "0.1.14"
edition = "2021"
license = "LGPL-3.0-only"
description = "Shared protocol types for Monarchic AI"
repository = "https://github.com/monarchic-ai/monarchic-agent-protocol"
homepage = "https://github.com/monarchic-ai/monarchic-agent-protocol"
readme = "README.md"
exclude = ["result*", "result-*"]

[lib]
path = "src/rust/lib.rs"

[dependencies]
prost = "0.14"
prost-types = "0.14"

[build-dependencies]
prost-build = "0.14"

[[example]]
name = "task"
path = "examples/rust/task.rs"
