[metadata]
name = monarchic-agent-protocol
version = 0.1.7
description = Monarchic AI protocol protobuf bindings for Python
long_description = file: PYTHON_README.md
long_description_content_type = text/markdown
license = Apache-2.0

[options]
packages = find:
package_dir =
    = src/python
python_requires = >=3.9
install_requires =
    protobuf>=4.25.0

[options.package_data]
* = *.proto

[options.packages.find]
where = src/python
