[metadata]
name = monarchic-agent-protocol
version = 0.1.12
description = Monarchic AI protocol protobuf bindings for Python
long_description = file: PYTHON_README.md
long_description_content_type = text/markdown
license = LGPL-3.0-only
license_files = LICENSE

[options]
packages = find:
package_dir =
    = src/python
python_requires = >=3.9
install_requires =
    protobuf>=4.25.0

[options.package_data]
* = *.proto

[options.packages.find]
where = src/python
